# verbal

./: .gitignore  Cargo.toml  Dockerfile  README.md  build  check  clean  deps  docker-compose.yml  hook.sh  package.json  tailwind.config.js  verbal.service
.github/: FUNDING.yml
.github/workflows/: deploy.yml  rust-clippy.yml
app/: app.ts  deps.ts  hooks.ts  main.js  main.ts  types.ts  utils.js
app/component/: carousel.js  detail.js  menu.js  player.js  popup.js  select.js  station.js  tab.js
app/components/: nav.component.ts
app/element/: button.js  icon.js  image.js  play-button.js
app/hooks/: fetch.hook.ts  form.hook.ts  input.hook.ts  route.hook.ts  stateref.hook.ts  translate.hook.ts
app/page/: account.js  auth.js  favorites.js  notfound.js  profile.js  search.js
app/pages/: error.page.ts  home.page.ts  login.page.ts  logout.page.ts  profile.page.ts  register.page.ts  reset.page.ts  search.page.ts  station.page.ts  verify.page.ts
app/translations/: de.translation.ts  en.translation.ts
backend/: Cargo.toml
backend/queries/: up.sql
backend/src/: config.rs  lib.rs  main.rs  messages.rs  models.rs  utils.rs
backend/src/middleware/: auth.rs
backend/src/queries/: code.rs  session.rs  station.rs  user.rs
backend/templates/: verify.html
emails/: verify.txt
script/: build  check  clean  color  location  media  wiki
scripts/: build.sh
sql/: create.sql  test.sql  up.sql
src/: adapter.rs  api.rs  body.rs  common.rs  config.rs  data.rs  error.rs  import.rs  lib.rs  main.rs  messages.rs  middleware.rs  model.rs  models.rs  queries.rs  response.rs  rest.rs  route.rs  schema.rs  server.rs  service.rs  state.rs  test.rs  utils.rs
src/adapter/: station_adapter.rs
src/backend/: api.rs
src/common/: station.rs
src/middleware/: auth.rs  cache.rs  cors.rs  error.rs
verbal-app/app/: app.ts  main.ts  types.ts
verbal-app/app/components/: nav.component.ts
verbal-app/app/hooks/: fetch.hook.ts  form.hook.ts  input.hook.ts  route.hook.ts  translate.hook.ts
verbal-app/app/pages/: home.page.ts  login.page.ts  logout.page.ts  profile.page.ts  register.page.ts  reset.page.ts  search.page.ts  station.page.ts
verbal-app/app/translations/: de.translation.ts  (+1 more)
verbal-app/scripts/: build.sh
verbal-server/: Cargo.toml
verbal-server/queries/: up.sql
verbal-server/src/: config.rs  error.rs  macros.rs  main.rs  messages.rs  models.rs  queries.rs  routes.rs  server.rs
verbal-server/src/middleware/: auth.rs  cache.rs  error.rs
verbal-server/src/queries/: code.rs  session.rs  user.rs
www/: index.html  manifest.json  worker.js
(+13 files in other folders)
