[package]
name = "verbal"
version = "0.0.3-dev"
edition = "2018"

[dependencies]
toml = "0.5.9"
tide = "0.16.0"
tide-sqlx = "0.6.1"
serde_json = "1.0.82"
tide-compress = "0.10.2"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "postgres"] }
dirs = "4.0.0"
env_logger = "0.10.0"
log = "0.4.17"
surf = "2.3.2"
tide-rustls = "0.3.0"
fancy-regex = "0.10.0"
lettre = { version = "0.10.1", features = ["smtp-transport"] }
bcrypt = "0.13.0"
