[package]
name = "verbal"
version = "0.0.3-dev"
edition = "2018"

[dependencies]
toml = "0.7.0"
tide = "0.16.0"
regex = "1.5.6"
tide-sqlx = "0.6.1"
serde_json = "1.0.82"
tide-compress = "0.11.0"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"] }
dirs = "5.0.0"
env_logger = "0.10.0"
log = "0.4.17"
surf = "2.3.2"
tide-rustls = "0.3.0"
