[package]
name = "verbal-server"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.5.9"
tide = { version = "0.16.0", features = ["cookies"] }
tide-sqlx = "0.6.1"
serde_json = "1.0.82"
tide-compress = "0.10.2"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "postgres"] }
dirs = "4.0.0"
env_logger = "0.10.0"
log = "0.4.17"
tide-rustls = "0.3.0"
fancy-regex = "0.10.0"
lettre = { version = "0.10.1", features = ["smtp-transport"] }
bcrypt = "0.13.0"
time = "0.2.27"
